[project]
name = "preble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Internal dependencies
    "preble",
    # External dependencies
    "datasets>=3.1.0",
    "fastapi>=0.115.5",
    "fire>=0.7.0",
    "gurobipy>=12.0.0",
    "matplotlib>=3.9.2",
    "paramiko>=3.5.0",
    "scipy>=1.13.1",
    "setuptools>=75.6.0",
    "transformers>=4.46.3",
    "uvicorn>=0.32.1",
    "cuda-python",
    "nvidia-cuda-nvrtc-cu12",
    "sglang[all]",
    # "flashinfer"
]

[tool.uv.sources]
preble = { path = "preble" }
# flashinfer = { index = "flashinfer" }

# [[tool.uv.index]]
# name = "flashinfer"
# url = "https://flashinfer.ai/whl/cu121/torch2.4/"

[project.scripts]
preble-server = "preble.server.server:main"
